[package]
name = "cast_checks_macro"
version = "0.1.5"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "cast_checks_macro"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trailofbits/cast_checks"
rust-version = "1.65"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }

[features]
default = []
release = []
